# DATSimulatorFMU

./: .gitignore  CMakeLists.txt
OspDirectory/: HeadingAutopilot.fmu  HeadingAutopilot_OspModelDescription.xml  MotorController.fmu  MotorController_OspModelDescription.xml  MotorFront.fmu  MotorRear.fmu  MotorRear_OspModelDescription.xml  NavigationService.fmu  NavigationService_OspModelDescription.xml  OspSystemStructure.xml  WaypointTracking.fmu  WaypointTracking_OspModelDescription.xml
OspDirectory/scenarios/: Scenario.json
src/HeadingAutopilot/: modelDescription.xml
src/HeadingAutopilot/sources/: HeadingAutopilot.cpp  HeadingAutopilot.h  fmu.cpp
src/Motor/: modelDescription.xml
src/Motor/sources/: fmu.cpp
src/MotorController/: modelDescription.xml
src/MotorController/sources/: fmu.cpp
src/MotorFront/: modelDescription.xml
src/MotorFront/sources/: fmu.cpp
src/MotorRear/: modelDescription.xml
src/MotorRear/sources/: fmu.cpp
src/NavigationService/: modelDescription.xml
src/NavigationService/sources/: fmu.cpp
src/WaypointTracking/: modelDescription.xml
src/WaypointTracking/sources/: Tracker.cpp  Tracker.h  fmu.cpp
tests/: CMakeLists.txt  tests.cpp
